tests/unit/default/syntax-error/135-add-fk-child-to-parent.x.t
---- IN ----
+FK%child(foo,bar)=>%parent(a,b)|
---- OUT ----
---- ERR ----
syntax: expected EOL after `...arent(a,b)` near `|` at position 32 - at line 1
---- EXIT ----
1
